force-app/main/default/objects/Rate_Limit_Counter__c/Rate_Limit_Counter__c.object-meta.xml
<CustomObject>
    <description>Tracks rate limit counters for Web-to-Case embed API. Records are auto-purged by the system.</description>
    <label>Rate Limit Counter</label>
    <nameField>
        <displayFormat>RL-{00000}</displayFormat>
        <label>Rate Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Limit Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>