force-app/main/default/objects/Rate_Limit_Counter__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>Number of submissions in this time bucket</description>
    <label>Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>1</defaultValue>
</CustomField>