force-app/main/default/objects/Rate_Limit_Counter__c/fields/Hour_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Hour_Bucket__c</fullName>
    <description>The hour this counter represents (for cleanup)</description>
    <label>Hour Bucket</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>