force-app/main/default/objects/Rate_Limit_Counter__c/fields/Origin_Domain__c.field-meta.xml
<CustomField>
    <fullName>Origin_Domain__c</fullName>
    <description>The actual origin domain (for logging/debugging)</description>
    <label>Origin Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>