force-app/main/default/objects/Rate_Limit_Counter__c/fields/Origin_Key__c.field-meta.xml
<CustomField>
    <fullName>Origin_Key__c</fullName>
    <description>Hash of origin domain + hour bucket for rate limiting</description>
    <externalId>true</externalId>
    <label>Origin Key</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>